--- a/AS/a/aas.css
+++ b/AS/a/aas.css
@@ -1,5 +1,5 @@
 table{
-    width: 65%;
+    width: 75%;
     height: 50%;
     background-color: rgba(248,234,169,0.55);
     border-radius: 10px 10px 10px 10px;
@@ -23,13 +23,13 @@ th{
     color: #26518a;
     font-weight: bold;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 80%;
 }
 
 .thf{
     color: rgb(134, 64, 174);
     text-decoration: underline;
-    font-size: 14px;
+    font-size: 100%;
     padding: 5px;
 }
 
@@ -38,7 +38,7 @@ th{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 35%;
+    width: 25%;
     height: 50%;
     float: right;
 
@@ -67,6 +67,12 @@ h3{
 br{
     background-image: url(image/bd.png);
 }
+
+
+
+
+
+
 
 
 
