--- a/AS/templatement-style-AS.css
+++ b/AS/templatement-style-AS.css
@@ -1,15 +1,6 @@
 
 
-.list-group-item {
-  background-color:white;
-  color: #76838f;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
 
-
-
-}
 
 table {
   font-family: arial, sans-serif;
@@ -26,12 +17,14 @@ td,th {
   background-image: url(image/body-bg4.png) ;
 
 
+
 }
 
 
 tr {
   background-color: white;
   text-align: center;
+  width: 5%;
 
 }
 
@@ -90,6 +83,18 @@ img{
   height: 100%;
   padding: 1px;
   border: 1pt solid black;
+
+}
+
+h4{
+  background-color: #fbf3d0;
+  color: #214e89;
+  width: 80%;
+  height: 100%;
+  margin-left: auto;
+  border-radius: 15px 25px 25px 25px;
+  border: 1pt solid black;
+  text-decoration: none;
 
 }
 
