--- a/AM/templatement-style-AM.css
+++ b/AM/templatement-style-AM.css
@@ -1,16 +1,3 @@
-
-
-.list-group-item {
-  background-color:white;
-  color: #76838f;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-
-
-
-}
-
 table {
   font-family: arial, sans-serif;
   width: 100%;
@@ -20,13 +7,15 @@ table {
 
 td,th {
   border: 0pt solid black;
-  text-align:center;
+  text-align:right;
   padding: 0;
   border-radius: 25px 25px 25px 25px;
   background-image: url(image/body-bg4.png) ;
+  width: 50%;
 
 
 }
+
 
 
 tr {
@@ -94,10 +83,13 @@ img{
 
 .bacem{
   background-image: url(image/body-bg4.png);
-  color: #214e89;
-  padding: 14px 25px;
+
+  width: 65%;
+  height: 100%;
+  margin-right: auto;
+  border-radius: 15px 25px 25px 25px;
   text-decoration: none;
-  display: inline-block;
+
 }
 
 
