--- a/AS/templatement-style-AS.css
+++ b/AS/templatement-style-AS.css
@@ -1,7 +1,3 @@
-
-
-
-
 table {
   font-family: arial, sans-serif;
   width: 100%;
@@ -11,7 +7,7 @@ table {
 
 td,th {
   border: 0pt solid black;
-  text-align:center;
+  text-align:right;
   padding: 0;
   border-radius: 25px 25px 25px 25px;
   background-image: url(image/body-bg4.png) ;
@@ -86,16 +82,18 @@ img{
 
 }
 
-h4{
-  background-color: #fbf3d0;
-  color: #214e89;
-  width: 80%;
-  height: 100%;
-  margin-left: auto;
-  border-radius: 15px 25px 25px 25px;
-  border: 1pt solid black;
-  text-decoration: none;
 
+
+.bacem{
+  background-image: url(image/body-bg4.png);
+
+  width: 65%;
+  height: 100%;
+  margin-right: auto;
+  border-radius: 15px 25px 25px 25px;
+
+  text-decoration: none;
+  
 }
 
 
